@@ -12,6 +12,8 @@ import java.util.Collection;
 import java.util.List;
 import java.util.UUID;
 
+import static java.util.stream.Collectors.toList;
+
 @Service
 @RequiredArgsConstructor
 public class NoteServiceImpl implements NoteService{
@@ -32,7 +34,7 @@ public class NoteServiceImpl implements NoteService{
         List<Note> notes = noteRepo.findAll();
         return notes.stream()
                 .map(noteMapper::convert)
-                .toList();
+                .collect(toList());
     }
 
     @Override
